--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -134,7 +134,7 @@ a {
 }
 
 .cookies-banner {
-  color: white;
+  color: #f2f2ec;
   background-color: $button-color-blue;
   #cookies-agree-button {
     margin: 0;
