--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -62,7 +62,7 @@
   display: block;
   text-align: center;
   background: #cccccc;
-  color: #ffffff;
+  color: #f2f2ec;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,.25);
   -webkit-transition: background-color .218s,border-color .218s,box-shadow .218s;
   transition: background-color .218s,border-color .218s,box-shadow .218s;
@@ -94,7 +94,7 @@
   }
 
   .customBtn-image {
-    background: #ffffff;
+    background: #f2f2ec;
     background-size: 18px 18px;
     padding:10px 10px 10px 10px;
   }
@@ -105,7 +105,7 @@
   background: #4688f1;
 
   .customBtn-image {
-    background: #ffffff image-url("google-logo.png") no-repeat left top;
+    background: #f2f2ec image-url("google-logo.png") no-repeat left top;
     background-size: 18px 18px;
     padding:10px 10px 10px 10px;
   }
