--- a/app/assets/stylesheets/utilities/_variables.scss
+++ b/app/assets/stylesheets/utilities/_variables.scss
@@ -17,8 +17,8 @@
 // Declare all variables here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-$background-color: #F5F7FB;
+$background-color: #f2f2ec;
 $error-background-color: #EFE6E6;
-$button-color-blue: #467FCF;
+$button-color-blue: #edbb5b;
 $header-height: 65px;
 $footer-height: 65px;
